[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[features]
default = []
js-export = []

[dependencies]
prost.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true
bytes.workspace = true
serde.workspace = true
tokio.workspace = true

[build-dependencies]
prost-build.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true

[dev-dependencies]
serde_json = "1.0"
