[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
prost.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true
tracing.workspace = true
axum.workspace = true
axum-extra.workspace = true
appstate.workspace = true
futures.workspace = true
protocol.workspace = true
